--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
     "lint": "bun run ./scripts/lint.ts",
-    "test": "bun run ./scripts/test.ts",
-    "install-bin": "bun run --filter=\"@superstreamer/*\" install-bin"
+    "test": "bun run ./scripts/test.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9"
