--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "bun --watch --inspect=ws://localhost:6499/sprs-api ./src/index.ts",
-    "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
+    "build": "bun build ./src/index.ts --target=bun --outdir=./dist && cp -r ./src/db/migrations ./dist",
     "lint": "tsc && eslint"
   },
   "devDependencies": {
