--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -23,8 +23,9 @@
   },
   "dependencies": {
     "hls.js": "^1.6.0-beta.3",
-    "tseep": "^1.3.1",
-    "shared": "workspace:*"
+    "media-captions": "^0.0.18",
+    "shared": "workspace:*",
+    "tseep": "^1.3.1"
   },
   "devDependencies": {
     "config": "workspace:*",
