--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
     "build": "vitepress build"
   },
   "dependencies": {
+    "@scalar/api-reference": "^1.25.122",
     "vitepress": "^1.4.1"
   }
 }
