--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,6 +6,7 @@
     "@eslint/js": "^9.12.0",
     "@typescript-eslint/parser": "^8.12.2",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "typescript-eslint": "^8.10.0"
