--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -16,23 +16,22 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsup --watch",
+    "dev": "tsup --watch 'src/**/*.(ts,tsx)'",
     "build": "tsc && tsup",
     "lint": "tsc && eslint",
     "typedoc": "typedoc --tsconfig tsconfig.typedoc.json"
   },
   "dependencies": {
-    "hls.js": "^1.6.0-beta.4",
-    "tseep": "^1.3.1",
-    "shared": "workspace:*"
+    "hls.js": "^1.6.2",
+    "tseep": "^1.3.1"
   },
   "devDependencies": {
     "config": "workspace:*",
-    "eslint": "^9.13.0",
-    "tsup": "^8.3.5",
-    "typedoc": "^0.26.8",
-    "typedoc-plugin-markdown": "^4.2.9",
-    "typescript": "^5.6.3"
+    "eslint": "^9.25.0",
+    "tsup": "^8.4.0",
+    "typedoc": "^0.26.11",
+    "typedoc-plugin-markdown": "^4.6.2",
+    "typescript": "^5.8.3"
   },
   "repository": {
     "type": "git",
