--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
     "test": "bun run --filter=\"@superstreamer/*\" test",
+    "lint": "bun run --filter=\"*\" lint",
     "install-bin": "bun run --filter=\"@superstreamer/*\" install-bin"
   },
   "devDependencies": {
