--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
-    "test": "bun run --filter=\"@superstreamer/*\" test",
+    "test": "bun run --filter=\"*\" test",
     "lint": "bun run --filter=\"*\" lint",
     "install-bin": "bun run --filter=\"@superstreamer/*\" install-bin"
   },
